--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,19 @@
+aiohttp==3.8.2
+aiosignal==1.3.1
+alpaca-py==0.13.1
+alpaca-trade-api==3.0.2
+annotated-types==0.6.0
+async-timeout==4.0.3
+attrs==23.1.0
 blinker==1.4
 cachetools==5.3.2
 certifi==2023.7.22
-charset-normalizer==3.3.1
+charset-normalizer==2.1.1
 cryptography==3.4.8
 dbus-python==1.2.18
+deprecation==2.1.0
 distro==1.7.0
+frozenlist==1.4.0
 google-auth==2.23.3
 google-auth-oauthlib==1.1.0
 gspread==5.12.0
@@ -17,20 +26,35 @@ launchpadlib==1.10.16
 lazr.restfulclient==0.14.4
 lazr.uri==1.0.6
 more-itertools==8.10.0
+msgpack==1.0.3
+multidict==5.2.0
+numpy==1.26.1
 oauthlib==3.2.0
+packaging==23.2
+pandas==2.1.2
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
+pydantic==2.4.2
+pydantic_core==2.10.1
 Pygments==2.11.2
 PyGObject==3.42.1
 PyJWT==2.3.0
 pyparsing==2.4.7
 python-apt==2.4.0+ubuntu1
-PyYAML==5.4.1
+python-dateutil==2.8.2
+pytz==2023.3.post1
+PyYAML==6.0
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
 SecretStorage==3.3.1
 six==1.16.0
-urllib3==2.0.7
+sseclient-py==1.8.0
+typing_extensions==4.8.0
+tzdata==2023.3
+urllib3==1.26.18
 wadllib==1.3.6
+websocket-client==1.6.4
+websockets==10.4
+yarl==1.9.2
 zipp==1.0.0
